--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,3 +1,16 @@
+body {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #754b23;
+}
+a, a:visited, a:active {
+  color: #754b23;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 .app {
   .center{
     text-align: center;
