fixed minor css selector issue

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .headerNav {
   text-align: right;
   text-transform: uppercase;
-  LI {
+  li {
     display: inline-block;
     list-style: none;
     margin-right: 2.75em;
