--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -3,7 +3,7 @@ $primary-text-color: #754b23;
 body {
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
   color: $primary-text-color;
 }
 a, a:visited, a:active {
