--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,15 +2,17 @@
   background-image: url(../../assets/images/strips1.png);
   background-repeat: repeat-y;
   background-position: right;
+  h3:first-child {
+    margin-top: 0;
+    margin-left: 3%;
+    padding-top: 3%;
+  }
   .content{
-    padding: 3% 15% 0 3%;
+    padding: 0 15% 0 3%;
     margin-right: 20%;
     background-image: url(../../assets/images/dots-box1.png);
     background-repeat: no-repeat;
-    background-position: right;
-    h3:first-child {
-      margin-top: 0;
-    }
+    background-position: right top;
   }
 }
 .cupCakes{
