implemented contact page

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
-  color: $primary-text-color;
+  color: $primaryText;
 }
 .app {
   .center{
