--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -1,1 +1,5 @@
-$primary-text-color: #754b23;
+$primaryText: #754b23;
+$scThemeOne: #e86b35;
+$scThemeTwo:#f6b53e;
+$scThemeThree: #06b4af;
+$dotColor: #f6ede6;
