--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import '../../assets/css/colors.scss';
 
 .header {
-  border-bottom: 24px solid $primary-text-color;
+  border-bottom: 24px solid $primaryText;
   .motto {
     font-family: 'Dancing Script', cursive;
     font-size: 1.5em;
