--- a/src/components/contact-form/form.scss
+++ b/src/components/contact-form/form.scss
@@ -26,7 +26,7 @@
     input, textarea, button {
       border: none;
       font-size: 1em;
-      padding-left: 10px;
+      padding: 0 0 0 10px;
       margin-bottom: 1em;
     }
     :nth-child(3n+1){
