--- a/src/components/contact-form/form.scss
+++ b/src/components/contact-form/form.scss
@@ -29,14 +29,20 @@
       padding: 0 0 0 10px;
       margin-bottom: 1em;
     }
-    :nth-child(3n+1){
+    div:nth-child(3n+1) input{
       background-color: $scThemeOne
     }
-    :nth-child(3n+2){
+    div:nth-child(3n+2) input, textarea{
       background-color: $scThemeTwo
     }
-    :nth-child(3n+3){
+    div:nth-child(3n+3) input, button{
       background-color: $scThemeThree
+    }
+    p.error {
+      position: absolute;
+      font-size: smaller;
+      color: darkred;
+      transform: translate(25em, 0em);
     }
   }
 }
