fixed error message position and some regexp

--- a/src/components/contact-form/form.scss
+++ b/src/components/contact-form/form.scss
@@ -40,9 +40,9 @@
     }
     p.error {
       position: absolute;
-      font-size: smaller;
+      font-size: 12px;
       color: darkred;
-      transform: translate(25em, 0em);
+      transform: translate(40px, 23px);
     }
   }
 }
