--- a/src/components/schedule/schedule.scss
+++ b/src/components/schedule/schedule.scss
@@ -25,8 +25,12 @@
   }
 }
 .error{
-  color: darkred;
+  color: $error;
   font-size: large;
   font-weight: bold;
   margin-bottom: 24px;
+  .stack{
+    font-size: small;
+    font-weight: 500;
+  }
 }
