--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,3 +1,5 @@
+@import '../../assets/css/fonts.scss';
+
 .home{
   .content{
     padding: 3%;
@@ -16,7 +18,7 @@
   .tagline{
     padding: 20px 0;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
+    font-family: $fancy;
     font-size: 1.25em;
   }
   .cupCakes{
