fixed font-size issue with caption

--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -43,12 +43,13 @@
       padding-bottom: 1em;
     }
     .cost{
-      float: right;
+      text-align: right;
       font-weight: 200;
     }
     .caption{
       font-family: $fancy;
       font-size: large;
+      font-weight: normal;
     }
   }  
 }
