fixed network error alignment and file structure

--- a/src/components/network_error/network_error.scss
+++ b/src/components/network_error/network_error.scss
@@ -1,6 +1,7 @@
 @import '../../assets/css/colors.scss';
 
 .networkError {
+  text-align: center;
   color: $error;
   padding: 2%;
   font-size: large;
