--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -3,18 +3,14 @@
 .main-nav {
   text-align: right;
   text-transform: uppercase;
-  li {
+  .navItem {
     display: inline-block;
     list-style: none;
     margin-right: 2em;
     vertical-align: middle;
   }
-  :last-child{
-    text-align: center;
-    margin-right: 0.4em;
-  }
 }
-a, a:visited, a:active {
+a:any-link {
   color: $primaryText;
   text-decoration: none;
 }
