--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,6 +5,9 @@
   border: 2px solid transparent;
   padding: 7px 5px;
   vertical-align: baseline;
+  &:hover{
+    border: 2px outset $dotColor;
+  }
   &:active{
     border: 2px inset $dotColor;
   }
