added missing css file

--- a/src/components/orders/order_details.scss
+++ b/src/components/orders/order_details.scss
@@ -20,6 +20,7 @@
     text-align: center;
     font-family: $fancy;
     font-size: x-large;
+    color: $scThemeOne;
     .item{
       width: 25%;
       display: inline-block;
