changed css for buttons, added transitions for products

--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -27,6 +27,10 @@
     &:hover{
       box-shadow: 20px 15px 35px 5px;
       transform: translate(-5%, -5%);
+      transition-property: transform;
+      transition-duration: 0.5s;
+      transition-timing-function: ease-in-out;
+      transition-delay: 0.05s;
     }
     .name{
       padding-bottom: 1em;
