added css for sign-in, fixed sign-up, order details, order status

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -1,7 +1,7 @@
 @import '../../assets/css/colors.scss';
 
 .signUp{
-  background-image: url('../../assets/images/down-dots.png');
+  background-image: url('../../assets/images/up-dots.png');
   width: 50%;
   margin: auto;
   background-position: center right;
