--- a/src/components/orders/order_details.scss
+++ b/src/components/orders/order_details.scss
@@ -18,13 +18,20 @@
   }
   .orderItems{
     text-align: center;
-    font-family: $fancy;
     font-size: x-large;
     color: $scThemeOne;
     .item{
       width: 25%;
       display: inline-block;
       padding: 0.25em;
+      .name{
+        font-family: $fancy;
+      }
+      .quantity{
+        font-size: medium;
+        color: $primaryText;
+        margin-bottom: 24px;
+      }
     }
   }
 }
